Add state-fair-lemonade.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 		<body>
 			<h1>Odin Recipes</h1>
+			<a href="./recipes/state-fair-lemonade.html">State Fair Lemonade</a>
 		</body>
 	</head>
 </html>
