Add lemonade chicken-sandwiches to index.html in <ul>

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 		<body>
 			<h1>Odin Recipes</h1>
-			<a href="./recipes/state-fair-lemonade.html">State Fair Lemonade</a>
+			<ul>
+				<a href="./recipes/state-fair-lemonade.html">State Fair Lemonade</a>
+				<a href="./recipes/slow-cooker-buffalo-chicken-sandwiches.html">Slow Cooker Buffalo Chicken Sandwiches</a>
+			</ul>
 		</body>
 	</head>
 </html>
