Fix the list for recipe that not worked

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<body>
 			<h1>Odin Recipes</h1>
 			<ul>
-				<a href="./recipes/state-fair-lemonade.html">State Fair Lemonade</a>
-				<a href="./recipes/slow-cooker-buffalo-chicken-sandwiches.html">Slow Cooker Buffalo Chicken Sandwiches</a>
+				<li><a href="./recipes/state-fair-lemonade.html">State Fair Lemonade</a></li>
+				<li><a href="./recipes/slow-cooker-buffalo-chicken-sandwiches.html">Slow Cooker Buffalo Chicken Sandwiches</a></li>
 			</ul>
 		</body>
 	</head>
