--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<ul>
 				<li><a href="./recipes/state-fair-lemonade.html">State Fair Lemonade</a></li>
 				<li><a href="./recipes/slow-cooker-buffalo-chicken-sandwiches.html">Slow Cooker Buffalo Chicken Sandwiches</a></li>
+				<li><a href="./recipes/slow-cooker-sausage-with-sauce.html">Slow Cooker Sausage with Sauce</a></li>
 			</ul>
 		</body>
 	</head>
