Add the missing alt text for image in ...with-sauce.html

--- a/recipes/slow-cooker-sausage-with-sauce.html
+++ b/recipes/slow-cooker-sausage-with-sauce.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Slow Cooker Sausage with Sauce</h1>
-        <img src="https://www.allrecipes.com/thmb/fZG405gGCHMhVFgI6AZkUGeUpHI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/70702-slow-cooker-sausage-with-sauce-ddmfs-4x3-step-04-1379-192aa4de62b44567afef9c9c47e8123b.jpg">
+        <img src="https://www.allrecipes.com/thmb/fZG405gGCHMhVFgI6AZkUGeUpHI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/70702-slow-cooker-sausage-with-sauce-ddmfs-4x3-step-04-1379-192aa4de62b44567afef9c9c47e8123b.jpg" alt="Slow Cooker Sausage with Sauce">
         <h2>Ingredients</h2>
         <ul>
             <li>8 (4 ounce) links fresh Italian sausage</li>
